# sparmos-engine

./: Cargo.toml  readme.md
.cargo/: config.toml
src/: lib.rs
src/application/: event_loop.rs  state.rs
src/core/: camera.rs  event_loop.rs  gui.rs  mod.rs  state.rs
src/entity/: entity.rs  line.rs  mod.rs  primitive_texture.rs  texture.rs
src/entity/core/: buffer.rs  engine.rs  geometry.rs  instance.rs  light.rs  material.rs  mod.rs  render.rs  resource.rs  storage_buffer.rs  system.rs
src/entity/entities/: cube.rs
src/entity/systems/: camera.rs  light.rs
src/helpers/: animation.rs  line_trace.rs  mod.rs
