[package]
name = "sparmos-engine"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
getrandom = { version = "0.3.3", features = ["wasm_js"] }
cfg-if = "1"
anyhow = "1.0"
bytemuck = { version = "1.16", features = ["derive"] }
cgmath = "0.18"
env_logger = "0.11"
pollster = "0.4"
log = "0.4"
wgpu = "27.0.1"
winit = { version = "0.30", features = ["rwh_05"] }
web-time = "1.1"
dot_vox = "5.2.0"
rand = "0.9"
spin_sleep = "1.3"
egui = "0.33"
egui-wgpu = { version = "0.33", features = ["winit"] }
egui-winit = { version = "0.33", default-features = false }

[dependencies.image]
version = "0.25"
default-features = false
features = ["png", "jpeg"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3.3", features = ["wasm_js"] }
web-sys = { version = "0.3", features = ["Document", "Window", "Element"] }
reqwest = { version = "0.12" }
console_error_panic_hook = "0.1"
console_log = "1.0"
wgpu = { version = "27.0.1", features = ["webgpu", "webgl"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-time = "1.1"
rand = { version = "0.9" }
js-sys = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

[[bin]]
name = "cv_game"
path = "src/main.rs"

[features]
gui = []
